# test9475

./: 0b94f982-036e-44d8-9112-b2b2d80b5caf  1152d016-51fe-4990-9413-3041a26fc5d2  15b518ce-8591-402b-ac45-7f8ae8de83a7  198c42bf-db13-448c-8f36-9051469adb58  21e383d1-d721-4fb5-9bce-be78ecd0daac  25704357-8121-46e6-977f-90318508131b  4045b374-2e9b-4fa5-818f-f6536659b80a  455b8253-f5e8-47ba-b55f-d19ce1f5b166  6b078946-5ee4-474f-b3ab-dfe5d673c9bc  6ebab9cc-c971-4992-8188-3087ce98bcdb  6f6832df-c589-4b59-833a-ba6e9f444f6b  8c1ac27f-e85d-4e5d-b518-6707cbed0205  DEv1Crack.rar  README.md  a.sh  a.txt  b65bc94b-5fe8-4b6e-b1c0-3120c612524c  d432ea2b-396a-4e9a-861f-37b6ef24e8cf  d5dea46b-ebe5-4a94-ba09-f98e28a12e7f  eed9276b-dfbb-4bb2-b7d8-02370d8488da  f5295bc8-62df-4cb4-89d0-e07775b0e834  ls.txt
00fd38cc-8692-4da1-b92e-e10a0de7bfac/: bot_commands.py  main.py  pyproject.toml
00fd38cc-8692-4da1-b92e-e10a0de7bfac/.upm/: store.json
01ff5271-cc3d-473b-805e-807fc8025151/: PaimonURL.txt  keep_alive.py  main.py  pyproject.toml
01ff5271-cc3d-473b-805e-807fc8025151/.upm/: store.json
02c72cd8-5622-46bb-a6af-90899997e4b3/: main.py  pyproject.toml
02c72cd8-5622-46bb-a6af-90899997e4b3/.upm/: store.json
02c72cd8-5622-46bb-a6af-90899997e4b3/protótipo/: bot.py
05fe0c68-3625-442d-a1d3-d5b98d879efe/: infos  keep_alive.py  main.py  paginator.py  pyproject.toml
05fe0c68-3625-442d-a1d3-d5b98d879efe/.upm/: store.json
05fe0c68-3625-442d-a1d3-d5b98d879efe/cogs/: lock.py  logging.py  minigames.py
067689ff-2a1f-4fde-b90f-f3f798079eec/: keep_alive.py  main.py  pyproject.toml
067689ff-2a1f-4fde-b90f-f3f798079eec/.upm/: store.json
09ff72aa-0647-417b-9707-c509a7442d7d/: BlackJack.py  global_var.py  main.py  pyproject.toml
09ff72aa-0647-417b-9707-c509a7442d7d/.upm/: store.json
0b733ee8-b225-4c30-8f3c-80a90c5b6eda/: README.md  config.py  main.py  pyproject.toml  replit_zip_error_log.txt
0b733ee8-b225-4c30-8f3c-80a90c5b6eda/.upm/: store.json
0b733ee8-b225-4c30-8f3c-80a90c5b6eda/bot_base/: command.py  event.py
0b733ee8-b225-4c30-8f3c-80a90c5b6eda/persona/: __init__.py  copycat.py  ddorai.py  gif_villain.py  gungye.py  last_chat_reminder.py  pingpong.py
0e6c4b01-3cb9-4fde-a86e-6b5e14e60652/: Ressource.env  main.py  pyproject.toml
0e6c4b01-3cb9-4fde-a86e-6b5e14e60652/.upm/: store.json
0ff8ceb0-09de-44f6-940f-205f94ea0309/: main.py  pyproject.toml  replit_zip_error_log.txt  server.py  spreadsheet-test-349902-f0569c22f9c1.json
0ff8ceb0-09de-44f6-940f-205f94ea0309/.upm/: store.json
1ad0cdc0-413b-4a3b-8a0e-eee81c2b88c6/: .cache  keep_alive.py  main.py  pyproject.toml
1ad0cdc0-413b-4a3b-8a0e-eee81c2b88c6/.upm/: store.json
1ad0cdc0-413b-4a3b-8a0e-eee81c2b88c6/cogs/: api.py  funcs.py  helpcoms.py  voice.py
1ad0cdc0-413b-4a3b-8a0e-eee81c2b88c6/config/: config.py
1c363190-ba48-49a4-be12-2813104d4045/: keep_alive.py  main.py  pyproject.toml
1c363190-ba48-49a4-be12-2813104d4045/.upm/: store.json
1c363190-ba48-49a4-be12-2813104d4045/cogs/: basic.py  monitor.py  shop.py
1d3b3187-1451-409b-b2fb-cd695912781f/: TOKEN.env  main.py  pyproject.toml
1d3b3187-1451-409b-b2fb-cd695912781f/.upm/: store.json
1e7d3510-f519-465d-9731-73ed93d2fb50/: .breakpoints  Greetings.py  README.md  db-Models.py  keep_alive.py  main.py  pyproject.toml  requirements.txt  test.py
1e7d3510-f519-465d-9731-73ed93d2fb50/.upm/: store.json324211124
1f659816-f7e3-4c4d-8464-cb8fab42a18c/: main.py  pyproject.toml
1f659816-f7e3-4c4d-8464-cb8fab42a18c/.upm/: store.json740386361
3e4a8e4f-929c-41bc-a8b7-3f18a3c2f7d6/: .gitignore  api.py  commands.py  db_clone.py  db_utils.py  init.py  main.py  notify.py  pyproject.toml  routine.py  server.py  utils.py  webhook.py
3e4a8e4f-929c-41bc-a8b7-3f18a3c2f7d6/templates/: index.html  status.html
410206df-7076-46d6-a244-a6f45b26a089/: .breakpoints  keep_online.py  levelsys.py  main.py  pyproject.toml
410206df-7076-46d6-a244-a6f45b26a089/.upm/: store.json151141131
47240850-fca8-4a91-b4b0-480360d617e7/: keep_alive.py  main.py  pyproject.toml
47240850-fca8-4a91-b4b0-480360d617e7/.upm/: store.json652432034
4be70692-a16b-4a1d-9d3b-446872eb4d6f/: README.md  discord_bot.py  pyproject.toml
4be70692-a16b-4a1d-9d3b-446872eb4d6f/.upm/: store.json
4d95e5e0-6ecb-4dba-86ec-16712fa40400/: keep_alive.py  main.py  pyproject.toml  vocal.py
4d95e5e0-6ecb-4dba-86ec-16712fa40400/.upm/: store.json688499267
4db9d8a1-f19d-49e7-b330-aaaf235a9de7/: flaskapp.py  main.py  pyproject.toml
4db9d8a1-f19d-49e7-b330-aaaf235a9de7/.upm/: store.json039216001
50f0f163-5ce6-453b-a1d3-efd3ad467f0b/: .breakpoints  license.md  main.py  mainbank.json  music.py  pafy.txt  pyproject.toml
50f0f163-5ce6-453b-a1d3-efd3ad467f0b/.upm/: store.json
50f0f163-5ce6-453b-a1d3-efd3ad467f0b/cogs/: Economy.py  buttons.py  elements.py  fun.py  help.py  moderation.py  premium_commands.py  rank.py  utility.py
50f0f163-5ce6-453b-a1d3-efd3ad467f0b/txts/: badwords.txt  frack.txt  rickroll.txt  usernames.txt
50f0f163-5ce6-453b-a1d3-efd3ad467f0b/utils/: checks.py  classbutton.py  prefix.py  weather.py  webserver.py
576b07ed-74cb-478c-af1c-924272b018b7/: commons.py  database_controller.py  database_model.py  globals.py  keep_alive.py  main.py  pyproject.toml  rythm.py
576b07ed-74cb-478c-af1c-924272b018b7/.upm/: store.json  store.json452286834  store.json648110284
6a7f116a-e1db-4d16-b89b-fed1d7667033/: keep_alive.py  pyproject.toml
6a7f116a-e1db-4d16-b89b-fed1d7667033/.upm/: store.json
7c04e9c6-b78d-4f0a-8bb7-631b6d3441f1/: config.json  pyproject.toml
8ac9f8ee-6a96-495d-a397-394cee7917e7/: config.json  pyproject.toml  replit_zip_error_log.txt
924554a2-d84c-40ee-9234-d922e3dbfc5a/: data.json  main.py  premium.txt  procfile  pyproject.toml
a04c5e33-cf6a-4232-a7f8-b54710c2615e/: bank.json  economy.txt  main.py  pyproject.toml  response.json  slots.txt
a2ef67e7-9a8d-4fcf-8e5d-875696e820b2/: keep_alive.py  main.py  music.py  music2.py  pyproject.toml
ac1a5932-2d6a-421e-b240-bc79065ecae6/: pyproject.toml
b934fcfb-2852-452c-991b-6d1bda7023ba/: levels  main.py  mainolder  pyproject.toml  users.json
(+3920 files in other folders)
