[tool.poetry]
name = "repl_python3_DiscordBOT"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
PyNaCl = "^1.5.0"
youtube_dl = "^2021.12.17"
asyncpg = "^0.25.0"
lxml = "^4.7.1"
bs4 = "^0.0.1"
selenium = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
