[tool.poetry]
name = "repl_python3_DiscordBot-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
replit = "^3.2.4"
beautifulsoup4 = "^4.10.0"
google = "^3.0.0"
discord2 = "^2.0.1"
"discord.py" = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
