[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repl_python3_Garrafa"
version = "0.1.0"
[tool.poetry.dependencies]
APScheduler = "^3.8.1"
aiohttp = "^3.8.1"
patchlib = "^0.3.0"
python = "^3.8"
python-dotenv = "^0.19.2"
pytz = "^2021.3"
uvloop = "^0.16.0"
[tool.poetry.dev-dependencies]
