[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "discordbot"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.0"
"discord.py" = "^1.3"
python = "^3.8"
attrs = "^20.3.0"
replit = "^2.0.0"
aiofiles = "^0.6.0"
flask = "^1.1.2"
[tool.poetry.dev-dependencies]
