[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "runner"
version = "0.1.0"
[tool.poetry.dependencies]
cryptography = "^2.8"
discord = "^1.0"
flask = "^1.1"
python = "^3.8"
"discord.py" = "^1.3.4"
db = "^0.1.1"
pytz = "^2020.4"
replit = "^2.0.0"
pydrive = "^1.3.1"
oauth2client = "^4.1.3"
discord-components = "^1.1.4"
discord-buttons-plugin = "^0.1.2"
[tool.poetry.dev-dependencies]
