[tool.poetry]
name = "repl_python3_DiscordBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
PyNaCl = "^1.4.0"
requests = "^2.26.0"
Flask = "^2.0.1"
botocore = "^1.21.44"
boto3 = "^1.18.44"
spotipy = "^2.19.0"
bs4 = "^0.0.1"
youtube_dl = "^2021.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
