[tool.poetry]
name = "ch-discordbot"
version = "0.2.0"
description = "ch discord bot"
authors = ["OB"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
replit = "^3.0.0"
discord = "^1.0.1"
waitress = "^2.0.0"
Paste = "^3.5.0"
cutandpaste = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
