[tool.poetry]
name = "discordbot-search-engine"
version = "0.1.0"
description = ""
authors = ["uglyboy7540 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
bs4 = "^0.0.1"
"googlesearch.py" = "^1.2"
googletrans = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
