[tool.poetry]
name = "discordbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
praw = "^7.3.0"
Flask = "^2.0.1"
"akinator.py" = "^5.0.0"
youtube_dl = "^2021.6.6"
PyNaCl = "^1.4.0"
pyjokes = "^0.6.0"
jokeapi = "^0.2.11"
pymongo = "^3.12.0"
dnspython = "^2.1.0"
times = "^0.7"
pip = "^21.2.4"
aiofiles38 = "^0.5.0-alpha.0"
aiofiles = "^0.7.0"
aiohttp = "^3.7.4"
py-cord = {git = "https://github.com/Pycord-Development/pycord"}
discord = "^1.7.3"
discord-together = "^1.1.2"
googletrans = "3.1.0a0"
motor = "^2.5.1"
pytz = "^2021.3"
pafy = "^0.5.5"
pyshorteners = "^1.0.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
