[tool.poetry]
name = "repl_python3_Basic-Accounts-Gen-DiscordBot"
version = "0.1.0"
description = ""
authors = ["elipinhasov <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
colorama = "^0.4.4"
dhooks = "^1.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
