[tool.poetry]
name = "repl_python3_LinkvertiseBypass-DiscordBot"
version = "0.1.0"
description = ""
authors = ["NonGaming <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.7.1"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
