[tool.poetry]
name = "repl_python3_Discordbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
youtube_dl = "^2021.6.6"
Flask = "^2.0.1"
PyNaCl = "^1.4.0"
DiscordUtils = "^1.3.4"
praw = "^7.5.0"
asyncpraw = "^7.5.0"
pytz = "^2021.3"
sympy = "^1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
