[tool.poetry]
name = "discordbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.3"
requests = "^2.26.0"
json2 = "^0.4.0"
random2 = "^1.0.1"
replit = "^3.2.4"
Flask = "^2.0.2"
youtube_dl = "^2021.12.17"
pafy = "^0.5.5"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
