[tool.poetry]
name = "repl_python3_DiscordBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
emoji = "^1.2.0"
mtranslate = "^1.8"
aiohttp = "^3.7.4"
bs4 = "^0.0.1"
psutil = "^5.8.0"
colorama = "^0.4.4"
colorthief = "^0.2.1"
discord = "^1.0.1"
moviepy = "^1.0.3"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
