[tool.poetry]
name = "discordbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
discord = "^1.0.1"
flask = "^1.1.2"
choice = "^0.1"
youtube-dl = "^2021.4.26"
PyNaCl = "^1.4.0"
pymongo = "^3.11.4"
"discord.py" = "^1.7.3"
dnspython3 = "^1.15.0"
srv = "^1.1.0"
pymongo-amplidata = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
